# sentinel-data-observability

./: .env.example  .gitignore  LICENSE  Makefile  README.md  Sentinel_Project_Build_Guide.md  Sentinel_Technical_Spec.md  __init__.py  config.py  implementation_plan.md  orchestrator.py  pyproject.toml  schemas.py  task.md
.github/workflows/: tests.yml
action/: __init__.py  executor.py  preview.py  registry.py
dashboard/: __init__.py  app.py  flow_graph.py
docs/: architecture.md  writeup.md
evaluation/: attribution.py  detection_metrics.py  graduated.py  memory_ablation.py  plots.py  report_rubric.py  run_experiments.py
governance/: __init__.py  approval.py  audit.py  policy.py  resolution.py  suppression.py
intent/: __init__.py  parser.py
intent/datasets/: transactions.yaml
memory/: embed.py  retrieve.py  store.py
observability/: metrics.py  operational.py  store.py
observability/detection/: engine.py  operational.py  rules.py  statistical.py
pipeline/: __init__.py  faults.py  flows.py  ingest.py
pipeline/transform/: __init__.py  transform.py
reasoning/: __init__.py  context.py  prompts.py  reporter.py
routing/: __init__.py  slack.py
scripts/: seed_demo.py
tests/: smoke_test.py  smoke_test_extended.py  test_action_governance.py  test_control_loop.py  test_units.py
